# SADAL

./: .gitignore  CMakeLists.txt  engine.cpp  engine.h  main.cpp
engine/: engine.cpp  engine.h  tiny_obj_loader.h  transformation.h  vertex.cpp  vertex.h
shaders/src/: fragment.frag  vertex.vert
